NeoZygisk name in webui

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -38,8 +38,7 @@
             <div class="card">
                 <h2 data-i18n="basic_info">Basic Information</h2>
                 <div class="info-item">
-                    <label id="prop-name">NeoZygisk</label>
-                    <div class="value" id="prop-version">_</div>
+                    <label>NeoZygisk</label>
                 </div>
                 <div class="info-item">
                     <label data-i18n="kernel">Kernel</label>
