--- a/webroot/index.html
+++ b/webroot/index.html
@@ -39,6 +39,7 @@
                 <h2 data-i18n="basic_info">Basic Information</h2>
                 <div class="info-item">
                     <label>NeoZygisk</label>
+                    <div class="value" id="prop-version">_</div>
                 </div>
                 <div class="info-item">
                     <label data-i18n="kernel">Kernel</label>
